--- a/render.yaml
+++ b/render.yaml
@@ -2,14 +2,15 @@ databases:
   - name: job-board-db
     databaseName: job_board
     user: job_board_user
-    plan: free # Explicitly set to free plan
+    plan: free
 
 services:
   # Backend Service
   - type: web
     name: job-board-backend
     runtime: python
-    plan: free # Explicitly set to free plan
+    plan: free
+    rootDir: backend
     buildCommand: "bash build.sh"
     startCommand: "gunicorn job_board.wsgi:application"
     envVars:
@@ -30,7 +31,7 @@ services:
   - type: web
     name: job-board-frontend
     runtime: static
-    plan: free # Explicitly set to free plan
+    plan: free
     rootDir: frontend
     buildCommand: "npm install && npm run build"
     staticPublishPath: "./dist"
